# cvra_debra_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml  ros-setup.bash  setup.bash  workspace-setup.bash
base_control/scripts/: odometry_ros_publisher.py
beacons_interface/: CMakeLists.txt  package.xml
beacons_interface/launch/: beacons_interface.launch
beacons_interface/scripts/: ennemy_position_publisher.py
cvra_msgs/: CMakeLists.txt  package.xml
cvra_msgs/msg/: Acceleration2D.msg  BaseTrajectory.msg  BaseTrajectoryPoint.msg  EnnemyPosition.msg  ErrorControl.msg  ErrorFatal.msg  JointDebug.msg  JointInfo.msg  JointTrajectory.msg  JointTrajectoryPoint.msg  PID.msg  PIDTune.msg  Pose2DStamped.msg  Tool.msg  Velocity2D.msg
cvra_msgs/srv/: GetArmTrajectory.srv  GetBaseTrajectory.srv
cvra_operations/: CMakeLists.txt  beacons_param.yaml  common_param.yaml  debra_param.yaml  debug_msg.yaml  package.xml
cvra_operations/launch/: caprica.launch  debra.launch
cvra_operations/params/: common.yaml  debra.yaml  debug.yaml
debra_control/: CMakeLists.txt  package.xml
debra_control/config/: joint_position_control.yaml
debra_control/launch/: debra_gazebo.launch
debra_control/scripts/: key_teleop.py
debra_description/: CMakeLists.txt  README.md  model.config  package.xml
debra_description/launch/: debra_display.launch  debra_rviz.launch  display.launch  eurobot2015.launch  gazebo.launch  urdf_view.rviz
debra_description/meshes/: base_link.stl  wheel.stl
debra_description/scripts/: joint_publisher  set_robot_pose
debra_description/src/: odometry_publisher.cpp
debra_description/urdf/: arm_arm.xacro  arm_forearm.xacro  arm_slider.xacro  arm_support.xacro  body.xacro  common_properties.xacro  debra.gv  debra.urdf  debra.xacro  hokuyo.xacro  materials.xacro  wheel.xacro
debra_description/worlds/eurobot2015/: eurobot2015.stp  eurobot2015.world
debra_gazebo/: CMakeLists.txt  README.md  package.xml
debra_gazebo/launch/: debra_gazebo.launch
deprecated/base_control/: CMakeLists.txt  package.xml
deprecated/base_control/scripts/: cmd_vel_subscriber.py  odometry_cvra_publisher.py  odometry_master_listen.py  odometry_tf_publisher.py
deprecated/debra_control/: CMakeLists.txt  README.md
deprecated/debra_control/config/: joint_position_control.yaml
deprecated/debra_control/launch/: debra_gazebo.launch
deprecated/debra_control/scripts/: key_teleop.py
deprecated/debra_gazebo/: package.xml
deprecated/debra_gazebo/launch/: debra_gazebo.launch
deprecated/joint_control/scripts/: joint_info_cvra_publisher.py
docker_cvra_dev/: Dockerfile
joint_control/: CMakeLists.txt  package.xml
master_bridge/: CMakeLists.txt  debug_msg.yaml  package.xml
master_bridge/launch/: feedback_stream.launch  master_bridge.launch
master_bridge/scripts/: config.yaml  feedback_stream.py  master_publisher.py  odo.py
molly_base_motion_planner/: CMakeLists.txt  README.md  package.xml
molly_base_motion_planner/launch/: molly_base_motion_planner_server.launch
molly_base_motion_planner/scripts/: get_base_trajectory_client.py  get_base_trajectory_server.py
pickit_arm_planner/: CMakeLists.txt  package.xml
pickit_arm_planner/launch/: pickit_arm_planner_server.launch
pickit_arm_planner/scripts/: get_arm_trajectory_server.py
robot_odometry/: CMakeLists.txt  package.xml
robot_odometry/scripts/: odometry_publish.py
webcam_stream/: CMakeLists.txt  package.xml
webcam_stream/launch/: raw_stream.launch
