<?xml version="1.0"?>
<package>
  <name>debra_description</name>
  <version>0.1.0</version>
  <description>The debra_description package</description>
  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export></export>
</package>
