<?xml version="1.0"?>
<package>
  <name>master_bridge</name>
  <version>0.1.0</version>
  <description>Package that acts as a bridge between the master board and ROS using the simple RPC interface</description>
  <maintainer email="missrisalaheddine@gmail.com">Salah</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cvra_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cvra_msgs</run_depend>
  <export></export>
</package>
