<?xml version="1.0"?>
<package>
  <name>webcam_stream</name>
  <version>0.1.0</version>
  <description>The webcam streaming package</description>

  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missri</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export></export>
</package>
