<?xml version="1.0"?>
<package>
  <name>debra_gazebo</name>
  <version>0.1.0</version>
  <description>The debra_gazebo package</description>
  <maintainer email="missrisalaheddine@gmail.com">saladin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>debra_description</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <run_depend>debra_description</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <export></export>
</package>
